Yuval + Logr Model

--- a/code/0_Data_Exploration.ipynb
+++ b/code/0_Data_Exploration.ipynb
@@ -361,8 +361,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MISSING "
+    "### MISSING DATA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fetch_forename(data):\n",
+    "    \"\"\"fetch forename from authors list\"\"\"\n",
+    "    last_author=data[-1]\n",
+    "    if \"forename\" in last_author and last_author[\"forename\"] is not None:\n",
+    "            return last_author[\"forename\"]\n",
+    "    else:\n",
+    "            return None\n",
+    "author_series = df['authors'].apply(lambda x: fetch_forename(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_rows = df.shape[0]\n",
+    "missing_authors = np.sum([0 if type(auth) is list else 1 for auth in df['authors']]) / total_rows\n",
+    "missing_mesh =  np.sum([0 if type(auth) is list else 1 for auth in df['mesh']]) / total_rows\n",
+    "missing_inst =  np.sum([0 if type(auth) is str else 1 for auth in df['last_author_inst']]) / total_rows\n",
+    "missing_email = np.sum([0 if type(auth) is list else 1 for auth in df['last_author_email']]) / total_rows\n",
+    "#Unfair because we supplemented with our data which is complete\n",
+    "missing_country = np.sum([0 if type(auth) is str else 1 for auth in df['last_author_country']]) / total_rows\n",
+    "missing_forename = np.sum([0 if type(auth) is str else 1 for auth in author_series]) / total_rows\n",
+    "only_first_initial = np.sum([1 if len(auth.split(\" \")[0]) == 1 else 0 for auth in author_series]) / total_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Authors:  0.0\n",
+      "Missing Mesh:  0.14366602049010532\n",
+      "Missing Inst:  0.14856093581369656\n",
+      "Missing Email:  0.6850937808489634\n",
+      "Missing Forename:  0.0\n",
+      "Precentage of Forenames with just an initial for the first name:  0.07167444976957582\n",
+      "No missing country, but only because of our missing details.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Missing Authors: \", missing_authors)\n",
+    "print(\"Missing Mesh: \", missing_mesh)\n",
+    "print(\"Missing Inst: \", missing_inst)\n",
+    "print(\"Missing Email: \", missing_email)\n",
+    "print(\"Missing Forename: \", missing_forename)\n",
+    "print(\"Precentage of Forenames with just an initial for the first name: \", only_first_initial)\n",
+    "\n",
+    "print(\"No missing country, but only because of our missing details.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
