--- a/code/4_feature_extraction-names.ipynb
+++ b/code/4_feature_extraction-names.ipynb
@@ -11,24 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "based on "
+    "based on  https://github.com/foxcroftjn/CanAI-Name2Vec"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "The autoreload extension is already loaded. To reload it, use:\n  %reload_ext autoreload\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from py_4.feature_helper import get_names\n",
+    "from py_4.feature_helper import get_names, get_co_authors\n",
     "from gensim.models.doc2vec import Doc2Vec, TaggedDocument\n",
     "import pandas as pd\n",
     "from os import makedirs, path\n",
@@ -39,20 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# model settings\n",
     "epoches=2\n",
-    "vector_size=20\n",
+    "vector_size=64\n",
     "window=2\n",
     "parameters = (epoches,vector_size,window)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {
     "tags": []
    },
@@ -92,7 +86,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Generating model with epochs=2 vector_size=20 window=2\n19676\nSaved model to models/names_epochs_2_vectorSize_20_window_2.model\n"
+     "text": "Generating model with epochs=2 vector_size=64 window=2\n19676\nSaved model to models/names_epochs_2_vectorSize_64_window_2.model\n"
     }
    ],
    "source": [
@@ -112,22 +106,74 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 39,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# co-authors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model_co_authors(epochs, vector_size, window):\n",
+    "    documents = [TaggedDocument(list(doc), [i]) for i, doc in enumerate(get_co_authors())]\n",
+    "    #print(documents)\n",
+    "    model = Doc2Vec(documents, epochs=epochs, vector_size=vector_size, window=window, workers=1)\n",
+    "    print(len(documents))\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model settings\n",
+    "epoches=2\n",
+    "vector_size=64\n",
+    "window=2\n",
+    "parameters = (epoches,vector_size,window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "array([-0.0363353 ,  0.02401276, -0.05405439, -0.01508737,  0.00028305,\n        0.00556437, -0.05705069,  0.02164698,  0.02014845,  0.0292481 ,\n       -0.03013219,  0.00459367,  0.01585584,  0.04888349,  0.05226859,\n       -0.00317838, -0.01010966,  0.00289698, -0.0176934 , -0.01804718],\n      dtype=float32)"
-     },
-     "metadata": {},
-     "execution_count": 39
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Generating model with epochs=2 vector_size=64 window=2\n196571\nSaved model to models/co_authors_epochs_2_vectorSize_64_window_2.model\n"
     }
    ],
    "source": [
-    "model.infer_vector([\"A\",\"r\",\"v\",\"a\",\"n\"])"
+    "#create model if it doesn't already exist\n",
+    "makedirs('models', exist_ok=True)\n",
+    "\n",
+    "model_path = 'models/co_authors_epochs_%d_vectorSize_%d_window_%d.model' % parameters\n",
+    "\n",
+    "if path.exists(model_path):\n",
+    "    print(f\"'{model_path}' already exits. Using existing model to re-generate results.\")\n",
+    "    model = Doc2Vec.load(model_path)\n",
+    "else:\n",
+    "    print('Generating model with epochs=%d vector_size=%d window=%d' % parameters)\n",
+    "    model = train_model_co_authors(*parameters)\n",
+    "    model.save(model_path)\n",
+    "    print(f'Saved model to {model_path}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
