--- a/code/5_temp_get_names.ipynb
+++ b/code/5_temp_get_names.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -103,38 +103,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Tiwari, P\nRosen, M\nMadabhushi, A\n"
+    }
+   ],
    "source": [
-    "df['last_name']= df.last_author_name.apply(lambda x: x.split(',')[0])"
+    "obj=df[:1].authors\n",
+    "for i in obj[0]:\n",
+    "    print(i['name'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array(['Madabhushi', 'Uzal', 'Kurzrock', ..., 'Lany', 'Routes', 'Zilliox'],\n      dtype=object)"
+      "text/plain": "['Tiwari, P', 'Rosen, M', 'Madabhushi, A']"
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 10
     }
    ],
    "source": [
-    "names=df.last_name.unique()"
+    "[i['name']for i in obj[0]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame(names).to_json('last_names.json')"
+    "df['names']= df.authors.apply(lambda x: [i['name']for i in x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "0                      [Tiwari, P, Rosen, M, Madabhushi, A]\n1                     [Sridhar, A, Doyle, S, Madabhushi, A]\n2          [Tiwari, P, Danish, SF, Jiang, B, Madabhushi, A]\n3         [Xu, J, Xiang, L, Wang, G, Ganesan, S, Feldman...\n4            [Basavanhally, A, Viswanath, S, Madabhushi, A]\n                                ...                        \n196566    [Choudhary, V, Olala, LO, Kaddour-Djebbar, I, ...\n196567    [Qureshi, H, Genescà, M, Fritts, L, McChesney,...\n196568    [Grummon, AH, Heaney, CA, Dellinger, WA, Wilki...\n196569                  [Buck, KJ, Walter, NA, Denmark, DL]\n196570    [Braun, LR, Fisk, WA, Lev-Tov, H, Kirsner, RS,...\nName: names, Length: 196571, dtype: object"
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "df['names'].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(df['names'].to_list()).to_csv('co_authors.json', orient='records')"
    ]
   },
   {
@@ -1683,7 +1720,7 @@
   "kernelspec": {
    "display_name": "Python 3.6.8 64-bit ('nlp': conda)",
    "language": "python",
-   "name": "python_defaultSpec_1593959860062"
+   "name": "python_defaultSpec_1594062773130"
   },
   "language_info": {
    "codemirror_mode": {
