mid-proj on name_vec

--- a/code/4_feature_representation.ipynb
+++ b/code/4_feature_representation.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -119,16 +119,7 @@
     "id": "WRpJiKHJWMaL",
     "outputId": "52c25c38-daeb-4139-e7dd-40430bda43b4"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "  import pandas.util.testing as tm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, re, sys\n",
     "\n",
@@ -145,6 +136,9 @@
     "import py_3.lr_model_3 as lr_model_3\n",
     "import py_3.db_scan_3 as db_scan_3\n",
     "import py_4.get_mesh_vec as get_mesh_vec\n",
+    "import py_4.get_cat_vec as get_cat_vec\n",
+    "import py_4.get_names_vec as get_names_vec\n",
+    "import py_4.get_all_features as get_all_features\n",
     "\n",
     "import metric_eval_2\n",
     "\n",
@@ -159,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -172,17 +166,12 @@
    "outputs": [
     {
      "data": {
-      "application/vnd.google.colaboratory.intrinsic": {
-       "type": "string"
-      },
       "text/plain": [
-       "'/content/AYP/data/labeled_data/enriched_labeled_dataset_large.json'"
+       "'/home/ubuntu/AYP/data/labeled_data/enriched_labeled_dataset_large.json'"
       ]
      },
-     "execution_count": 10,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 3,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -192,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -308,84 +297,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "PoNLkAEmWMaj"
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df_country = df[['last_author_country']]"
+    "gcv = get_cat_vec.CatFeat(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "vOTPF711WMan"
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "Y = pd.get_dummies(df_country)"
+    "ohe_inst = gcv.get_ohe_inst(df.last_author_inst)\n",
+    "ohe_country = gcv.get_ohe_country(df.last_author_country)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## NAME VECTOR"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "5MvKcQ97WMar"
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'/home/ubuntu/AYP/code/models/names_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "import scipy.sparse"
+    "gaf = get_all_features.VAE_Features(df.iloc[:100,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "9GoSwJ2OWMau"
-   },
-   "outputs": [],
-   "source": [
-    " enc = OneHotEncoder(handle_unknown='ignore')\n",
-    " X = enc.fit_transform(df_country)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "TPIffdErWMax",
-    "outputId": "6c07a040-b356-4924-bdaf-22801d72f3ca"
-   },
+   "execution_count": 23,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "(2, 64)"
       ]
      },
-     "execution_count": 38,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 23,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.allclose(scipy.sparse.csr_matrix(Y).A, X.A)"
+    "gaf.get_all_features(df.iloc[:2,:]).shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NO MANS LAND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'/home/ubuntu/AYP/code/models/names_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gaf = get_all_features.VAE_Features(df.iloc[:100,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.28768207]\n",
+      " [3.91202301]\n",
+      " [2.81341072]\n",
+      " [3.91202301]\n",
+      " [3.5065579 ]\n",
+      " [2.52572864]\n",
+      " [2.52572864]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/AYP/code/py_4/get_all_features.py:57: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['last_names']=df.last_author_name.apply(lambda x: x.split(',')[0])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2, 64)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gaf.get_all_features(df.iloc[:2,:]).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = df.iloc[:20,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "def extract_coauthors(df_authors):\n",
+    "    lst = []\n",
+    "    for dict_df in df_authors:\n",
+    "        lst.append([dict_df['name']])\n",
+    "    return lst\n",
+    "\n",
+    "test_df = df.iloc[:20,:]\n",
+    "test_df['last_names']=[extract_coauthors(x) for x in test_df.authors]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'/home/ubuntu/AYP/code/models/names_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name_emb=get_names_vec.NameEmbeddings()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res=[]\n",
+    "for name in test_df['last_names']:\n",
+    "    res.extend(name_emb.infer_vec([i[0] for i in name]))\n",
+    "name_vec = np.array(res).reshape(test_df.shape[0],-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len_vec = np.array[len(x) for x in test_df['last_names']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
