Added Char Freq

--- a/code/4_feature_representation.ipynb
+++ b/code/4_feature_representation.ipynb
@@ -362,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### NO MANS LAND"
+    "### NO MANS LAND - WORKING ON THE NAME_VEC_EMB"
    ]
   },
   {
@@ -438,13 +438,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 72,
    "metadata": {},
    "outputs": [
@@ -503,11 +496,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "len_vec = np.array[len(x) for x in test_df['last_names']]"
+    "len_vec = np.array([len(x) for x in test_df['last_names']]).reshape(-1,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20, 65)"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((name_vec,len_vec)).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### EXPLORING CHAR FREQUENCY"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_freq_char(df_coauth):\n",
+    "    \n",
+    "    all_freq_char = []\n",
+    "    \n",
+    "    dict_char_freq_base = {}\n",
+    "    for c in string.ascii_lowercase[:26]:\n",
+    "        dict_char_freq_base[c] = 0\n",
+    "        \n",
+    "    for name in df_coauth:\n",
+    "        txt = re.sub(\", \",\"\",\"\".join(np.array(name).flatten())).lower()\n",
+    "        dict_char_freq = dict_char_freq_base.copy()\n",
+    "        for c in txt.lower():\n",
+    "            dict_char_freq[c] += 1\n",
+    "        all_freq_char.append(list(dict_char_freq.values()) / np.sum(list(dict_char_freq.values())))\n",
+    "    return np.array(all_freq_char)"
    ]
   },
   {
@@ -515,7 +558,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np_freq = get_freq_char(test_df.last_names[:5])"
+   ]
   }
  ],
  "metadata": {
