--- a/code/4_feature_representation.ipynb
+++ b/code/4_feature_representation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 193,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -27,21 +27,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: elasticsearch in /usr/local/lib/python3.6/dist-packages (7.8.0)\n",
-      "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from elasticsearch) (2020.6.20)\n",
-      "Requirement already satisfied: urllib3>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from elasticsearch) (1.24.3)\n",
-      "Requirement already satisfied: elasticsearch_dsl in /usr/local/lib/python3.6/dist-packages (7.2.1)\n",
-      "Requirement already satisfied: elasticsearch<8.0.0,>=7.0.0 in /usr/local/lib/python3.6/dist-packages (from elasticsearch_dsl) (7.8.0)\n",
-      "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from elasticsearch_dsl) (2.8.1)\n",
-      "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from elasticsearch_dsl) (1.12.0)\n",
-      "Requirement already satisfied: urllib3>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch_dsl) (1.24.3)\n",
-      "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch_dsl) (2020.6.20)\n",
-      "Requirement already satisfied: pymed in /usr/local/lib/python3.6/dist-packages (0.8.9)\n",
-      "Requirement already satisfied: requests>=2.20.0 in /usr/local/lib/python3.6/dist-packages (from pymed) (2.23.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20.0->pymed) (2020.6.20)\n",
-      "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20.0->pymed) (2.9)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20.0->pymed) (1.24.3)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20.0->pymed) (3.0.4)\n"
+      "Requirement already satisfied: elasticsearch in /home/ubuntu/anaconda3/lib/python3.7/site-packages (7.8.0)\n",
+      "Requirement already satisfied: certifi in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch) (2020.4.5.2)\n",
+      "Requirement already satisfied: urllib3>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch) (1.25.8)\n",
+      "Requirement already satisfied: elasticsearch_dsl in /home/ubuntu/anaconda3/lib/python3.7/site-packages (7.2.1)\n",
+      "Requirement already satisfied: python-dateutil in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (2.8.1)\n",
+      "Requirement already satisfied: six in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (1.14.0)\n",
+      "Requirement already satisfied: elasticsearch<8.0.0,>=7.0.0 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (7.8.0)\n",
+      "Requirement already satisfied: urllib3>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch_dsl) (1.25.8)\n",
+      "Requirement already satisfied: certifi in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch_dsl) (2020.4.5.2)\n",
+      "Requirement already satisfied: pymed in /home/ubuntu/anaconda3/lib/python3.7/site-packages (0.8.9)\n",
+      "Requirement already satisfied: requests>=2.20.0 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from pymed) (2.23.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (2020.4.5.2)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (2.9)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (1.25.8)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (3.0.4)\n"
      ]
     }
    ],
@@ -95,13 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 194,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "WlrNE61bWMaE"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 195,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -153,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 196,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -170,7 +179,7 @@
        "'/home/ubuntu/AYP/data/labeled_data/enriched_labeled_dataset_large.json'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 197,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -429,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,6 +569,45 @@
    "outputs": [],
    "source": [
     "np_freq = get_freq_char(test_df.last_names[:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'forename': 'Pallavi',\n",
+       "  'affiliation': 'Case Western Reserve University , Department of Biomedical Engineering, 10900 Euclid Avenue, Cleveland, Ohio 44106, United States.',\n",
+       "  'initials': 'P',\n",
+       "  'name': 'Tiwari, P',\n",
+       "  'lastname': 'Tiwari'},\n",
+       " {'forename': 'Shabbar F',\n",
+       "  'affiliation': 'Rutgers-Robert Wood Johnson Medical School , Department of Neurosurgery, 125 Paterson Street, Suite 4100, New Brunswick, New Jersey 08901, United States.',\n",
+       "  'initials': 'SF',\n",
+       "  'name': 'Danish, SF',\n",
+       "  'lastname': 'Danish'},\n",
+       " {'forename': 'Benjamin',\n",
+       "  'affiliation': 'Case Western Reserve University , School of Medicine, 10900 Euclid Avenue, Cleveland, Ohio 44106, United States.',\n",
+       "  'initials': 'B',\n",
+       "  'name': 'Jiang, B',\n",
+       "  'lastname': 'Jiang'},\n",
+       " {'forename': 'Anant',\n",
+       "  'affiliation': 'Case Western Reserve University , Department of Biomedical Engineering, 10900 Euclid Avenue, Cleveland, Ohio 44106, United States.',\n",
+       "  'initials': 'A',\n",
+       "  'name': 'Madabhushi, A',\n",
+       "  'lastname': 'Madabhushi'}]"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.authors[2]"
    ]
   }
  ],
