--- a/code/4_feature_representation.ipynb
+++ b/code/4_feature_representation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 204,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -31,17 +31,17 @@
       "Requirement already satisfied: certifi in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch) (2020.4.5.2)\n",
       "Requirement already satisfied: urllib3>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch) (1.25.8)\n",
       "Requirement already satisfied: elasticsearch_dsl in /home/ubuntu/anaconda3/lib/python3.7/site-packages (7.2.1)\n",
+      "Requirement already satisfied: elasticsearch<8.0.0,>=7.0.0 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (7.8.0)\n",
       "Requirement already satisfied: python-dateutil in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (2.8.1)\n",
       "Requirement already satisfied: six in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (1.14.0)\n",
-      "Requirement already satisfied: elasticsearch<8.0.0,>=7.0.0 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch_dsl) (7.8.0)\n",
-      "Requirement already satisfied: urllib3>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch_dsl) (1.25.8)\n",
       "Requirement already satisfied: certifi in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch_dsl) (2020.4.5.2)\n",
+      "Requirement already satisfied: urllib3>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from elasticsearch<8.0.0,>=7.0.0->elasticsearch_dsl) (1.25.8)\n",
       "Requirement already satisfied: pymed in /home/ubuntu/anaconda3/lib/python3.7/site-packages (0.8.9)\n",
       "Requirement already satisfied: requests>=2.20.0 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from pymed) (2.23.0)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (2020.4.5.2)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (3.0.4)\n",
       "Requirement already satisfied: idna<3,>=2.5 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (2.9)\n",
-      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (1.25.8)\n",
-      "Requirement already satisfied: chardet<4,>=3.0.2 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (3.0.4)\n"
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /home/ubuntu/anaconda3/lib/python3.7/site-packages (from requests>=2.20.0->pymed) (1.25.8)\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 205,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 214,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -148,6 +148,8 @@
     "import py_4.get_cat_vec as get_cat_vec\n",
     "import py_4.get_names_vec as get_names_vec\n",
     "import py_4.get_all_features as get_all_features\n",
+    "import py_4.get_co_authors_vec as get_co_authors_vec\n",
+    "\n",
     "\n",
     "import metric_eval_2\n",
     "\n",
@@ -376,58 +378,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'/home/ubuntu/AYP/code/models/names_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
+      "'/home/ubuntu/AYP/code/models/names_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n",
+      "'/home/ubuntu/AYP/code/models/co_authors_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
      ]
     }
    ],
    "source": [
-    "gaf = get_all_features.VAE_Features(df.iloc[:100,:])"
+    "gaf = get_all_features.VAE_Features(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.28768207]\n",
-      " [3.91202301]\n",
-      " [2.81341072]\n",
-      " [3.91202301]\n",
-      " [3.5065579 ]\n",
-      " [2.52572864]\n",
-      " [2.52572864]]\n"
+      "[[0.58879173]\n",
+      " [5.2509138 ]\n",
+      " [5.47283858]\n",
+      " [6.51348077]\n",
+      " [7.06536788]\n",
+      " [3.92261034]\n",
+      " [4.4602416 ]]\n",
+      "(2, 1045)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/AYP/code/py_4/get_all_features.py:57: SettingWithCopyWarning: \n",
+      "/home/ubuntu/AYP/code/py_4/get_all_features.py:64: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['last_names']=df.last_author_name.apply(lambda x: x.split(',')[0])\n"
+      "  '''\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(2, 64)"
+       "(2, 1175)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,9 +451,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'/home/ubuntu/AYP/code/models/co_authors_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -464,57 +475,20 @@
     }
    ],
    "source": [
-    "def extract_coauthors(df_authors):\n",
-    "    lst = []\n",
-    "    for dict_df in df_authors:\n",
-    "        lst.append([dict_df['name']])\n",
-    "    return lst\n",
-    "\n",
-    "test_df = df.iloc[:20,:]\n",
-    "test_df['last_names']=[extract_coauthors(x) for x in test_df.authors]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'/home/ubuntu/AYP/code/models/names_epochs_2_vectorSize_64_window_2.model' already exits. Using existing model to re-generate results.\n"
-     ]
-    }
-   ],
-   "source": [
-    "name_emb=get_names_vec.NameEmbeddings()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "co_authors_emb = get_co_authors_vec.CoAuthorEmbeddings()\n",
+    "test_df['co_authors']=test_df.authors.apply( lambda x: [i['name'] for i in x] )\n",
     "res=[]\n",
-    "for name in test_df['last_names']:\n",
-    "    res.extend(name_emb.infer_vec([i[0] for i in name]))\n",
+    "count_coauth = []\n",
+    "for au_list in test_df['co_authors'].to_list():\n",
+    "    res.extend(co_authors_emb.infer_vec([i for i in au_list]))\n",
+    "    count_coauth.append(len(au_list))\n",
+    "\n",
     "name_vec = np.array(res).reshape(test_df.shape[0],-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len_vec = np.array([len(x) for x in test_df['last_names']]).reshape(-1,1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -523,13 +497,13 @@
        "(20, 65)"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.hstack((name_vec,len_vec)).shape"
+    "np.hstack((name_vec,np.array(count_coauth).reshape(-1,1))).shape"
    ]
   },
   {
@@ -569,45 +543,6 @@
    "outputs": [],
    "source": [
     "np_freq = get_freq_char(test_df.last_names[:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 203,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'forename': 'Pallavi',\n",
-       "  'affiliation': 'Case Western Reserve University , Department of Biomedical Engineering, 10900 Euclid Avenue, Cleveland, Ohio 44106, United States.',\n",
-       "  'initials': 'P',\n",
-       "  'name': 'Tiwari, P',\n",
-       "  'lastname': 'Tiwari'},\n",
-       " {'forename': 'Shabbar F',\n",
-       "  'affiliation': 'Rutgers-Robert Wood Johnson Medical School , Department of Neurosurgery, 125 Paterson Street, Suite 4100, New Brunswick, New Jersey 08901, United States.',\n",
-       "  'initials': 'SF',\n",
-       "  'name': 'Danish, SF',\n",
-       "  'lastname': 'Danish'},\n",
-       " {'forename': 'Benjamin',\n",
-       "  'affiliation': 'Case Western Reserve University , School of Medicine, 10900 Euclid Avenue, Cleveland, Ohio 44106, United States.',\n",
-       "  'initials': 'B',\n",
-       "  'name': 'Jiang, B',\n",
-       "  'lastname': 'Jiang'},\n",
-       " {'forename': 'Anant',\n",
-       "  'affiliation': 'Case Western Reserve University , Department of Biomedical Engineering, 10900 Euclid Avenue, Cleveland, Ohio 44106, United States.',\n",
-       "  'initials': 'A',\n",
-       "  'name': 'Madabhushi, A',\n",
-       "  'lastname': 'Madabhushi'}]"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_df.authors[2]"
    ]
   }
  ],
